# 5G_OTA_TCU_Automotive_telematics-application

./: CMakeLists.txt  README.md
application/: CMakeLists.txt  Md5.c  autonetconfig.cpp  can.c  cansim.cpp  car_control.cpp  cell_shell.cpp  check_eeprom.cpp  checkvic.cpp  config_aplist.cpp  config_firewall.cpp  configsync.cpp  cvttime.cpp  eCallTTS.cpp  eCallTTY.cpp  eCallTTYchild.cpp  eeprom.c  event_logger.cpp  event_reader.cpp  ford_main.cpp  fw_talker.cpp  getTemp.c  get_gsm_parms.cpp  getfeature.cpp  getpids.cpp  gps_mon-eth.cpp  gps_mon.cfg  gps_mon.cpp  gps_mon_deb.cpp  gps_recv.cpp  gps_test.cpp  hello.cpp  homesync.cfg  homesync.cpp  lear_at.txt  log_event.cpp  monitor-kanaan.cpp  monitor.cfg  monitor.cpp  obd2_d.c  (+45 more)
include/: Md5.h  appendToFile.h  autonet_files.h  autonet_types.h  backtick.h  base64.h  bcd.h  beginsWith.h  callback.h  cobs.h  config.h  config_api.h  convertTimezone.h  crc16.h  crc32.h  csv.h  dateTime.h  eCallTTY.h  eventLog.h  fileExists.h  fileStats.h  getField.h  getParm.h  getPids.h  getStringFromFile.h  getToken.h  getUptime.h  getopts.h  grepFile.h  hiresTime.h  logError.h  my_features.h  network_utils.h  pgrep.h  readAssoc.h  readBinaryFile.h  readBuildVars.h  readFile.h  readFileArray.h  readconfig.h  (+20 more)
src/: CMakeLists.txt  unitcomm.cpp  unitcomm_test.cpp
